src/component/SearchOverlay/SearchOverlay.style.scss
:root {
    --cart-overlay-totals-background: var(--secondary-base-color);
    --cart-overlay-divider-background: #d8d8d8;
    --cart-overlay-promo-background: #ffffff;
    --cart-overlay-width: 400px;

    --White: #ffffff;
    --Black: #000000;
    --BlackOpacityOf6: #00000099;
    --BlackOpacityOf1: #0000001a;
    --Tundora: #4a4a4a;
    --Iron: #d1d3d4;
    --DustyGray: #9b9b9b;
}

.RecentSearches {
    text-align: left;
    letter-spacing: 1.56px;
    color: #000000;
    text-transform: uppercase;
    opacity: 1;
    ul {
        &::before {
            display: none;
        }

        display: flex;
    }

    a {
        text-decoration: none;
    }

    li {
        &::before {
            display: none;
        }

        margin-top: 0;
        margin-right: 8px;

        @include mobile {
            margin-right: 8px;
        }

        @include tablet {
            margin-right: 8px;
        }
    }

    h2 {
        font: normal normal 600 14px/19px 'Avenir Next', sans-serif;
        color : #000000;
        text-transform: uppercase;
        text-align: initial;
        letter-spacing: 1.56px;
        margin-bottom: 24px;
        margin-top: 0px;
        padding-left: 7px;
    }

    @include before-desktop() {
        ul {
            overflow-x: auto;
        }
    }

    @include desktop() {
        ul {
            flex-wrap: wrap;
        }
    }
}

.RecentSearches {

    &-searchList {
        li {
            margin-bottom: 0px;
            padding-left: 0px !important;
            .SearchSuggestion {
                &-TrandingTag {
                    font-size: 13px;
                }
            }
        }

        &_isArabic {
            li {
                &:first-of-type {
                    margin-right: 0 !important;
                }
            }
        }
    }
}

.SearchOverlay {
    text-transform: initial;

    @include desktop {
        width: 385px;
        height: auto !important;
    }

    @include after-mobile {
        position: absolute;
        right: -170px;
        padding: 0;
        width: var(--cart-overlay-width);

        &_isArabic {
            right: unset;
            left: -170px;
        }
    }


    &-Wrapper {
        .Image {
            &-Image {
                object-fit: cover;
            }
        }
    }


    &::before {

        @include after-mobile {
            content: "";
            position: absolute;
            list-style-type: none !important;
            height: 1px;
            width: 70px;
            z-index: 900;
            margin-left: auto;
            margin-right: auto;
            left: 0;
            right: 0;
            text-align: center;
            background-color: #4a4a4a;
        }
    }


    &_isPopup {
        opacity: 0;
        overflow: hidden;
    }

    &-ItemCount {
        color: #000000;
        font-family: 'Avenir Next';
        font-size: 18px;
        font-weight: var(--fw-medium);
        line-height: 20px;
        padding: 32px 32px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: left;

        div {
            font-size: 14px;
            font-weight: var(--fw-demi);
            .QuerySuggestionCount {
                padding-left : 1px;
                &_isArabic {
                    padding-right: 1px;
                }
            }

            div {
                font-weight: var(--fw-light);
            }
        }

        span:last-of-type {
            @include close-button;
        }

        .moreDataLink {
            text-align: initial;
            text-decoration: underline;
            font-size: 16px;
            position: left;
            font-family: 'Avenir Next';
            font-weight: 500;
            letter-spacing: 0px;
            opacity: 1;
            width: 200px;
            height: 21px;
            white-space: nowrap;
            overflow: hidden;
            display: inline-block;
            text-overflow: ellipsis;

        }
        .NothingFound {
            .moreDataLink {
                margin-top: 50px;
            }
            .suggestionBlocks {
                .spacingBlock {
                    &_isArabic {
                        width : 35px;
                    }
                    width: 35px;
                }
            }
        }
    }

    &-ItemCount,
    &-Empty {
        font-weight: var(--fw-regular);
    }

    &_isVisible {
        @include after-mobile {}
    }

    &-Items {
        padding-bottom: 20px;
        max-height: calc(60vh - 150px);
        overflow-y: auto;
        overflow-x: hidden;

        &::-webkit-scrollbar {
            width: 4px;
            border: 1px solid #d5d5d5;
        }

        &::-webkit-scrollbar-thumb {
            background: #585757;
            border-radius: 5px;
        }

        &::-webkit-scrollbar-track {
            background: #dcdcdc;
        }

        .CartItem {
            &-Content {
                height: auto;
            }

            .Image-Image {
                object-fit: cover;
            }
        }
    }

    &-Empty {
        font-size: 15px;
        font-weight: var(--fw-light);
        text-align: center;
        letter-spacing: 0.75px;
        padding: 20px 0;
    }
}

.Overlay {

    &_isInstant {
        pointer-events: all;
        touch-action: pan-y;
        opacity: 1;
        z-index: 99;

        @include desktop {
            height: auto;
        }
    }
}

div.SearchOverlay.Overlay {
    width: 590px;
    height: auto;
    opacity: 1;
    border-radius: 12px;
    background-color: #ffffff;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
}
/* ... */

